01/02/21
  - Added video link for unit testing demo on tests/README.md

01/01/21
  - Fix for reading BOOL arrays
  - Upped version to 0.7.8
  - Updated README

11/12/20
  - Fixed supplying data type when reading lists

11/11/20
  - Fixed returning only the first array value when reading lists

10/23/20
  - PR146
  - Fixes to continue python2 support

09/30/20
  - Rewrote parsing tag names
  - Fixed writing bits of a word
  - Upped version to 0.7.5

09/11/20
  - Updated tag list filter
  - Fixed timer example

09/10/20
  - Fixed getting struct raw data that was larger than a single packet

09/08/20
  - Fixed reading arrays larger than one packet
  - Fixed returning raw data when reading structs
  - Upped version to 0.7.4

09/04/20
  - Fixed import issue

09/02/20
  - Moved communications to its own module
  - Upped version to 0.7.3

09/01/20
  - Moved some code to lgx_device and lgx_tag
  - Removed unnecessary calls to _getUDT()
  - Upped version to 0.7.2

08/24/20
  - Fixed typo in lgx_device.py

07/15/20
  - Check connection sooner when reading lists
  - Updated README

07/14/20
  - Use muti service object to learn data types
  - Handle single leftover tag when getting multiple data types

07/13/20
  - Fixed when single tag is left over in batch read

07/09/20
  - Fixes for Micro800 strings

07/08/20
  - Fixed read issues after reorganization
  - Upped version to 0.6.11
  - Cleanup leftovers

07/07/20
  - Reorganized read and parsing replies
  - DWORD had incorrect pack/unpack format
  - Fixed getwrordcount returning a float under python3

05/13/20
  - Force little endian to support pylogix import in jython as Java uses big-endian. Issue #132 

05/13/20
  - Fixed PylogixTests.py imports

05/11/20
  - Default to LargeForwardOpen, fall back on ForwardOpen
  - Restructured some code, cleanup

05/05/20
  - Moved templates to .github hidden folder

05/04/20
  - Fix raw return for GetPLCTime
  - Fix printed return for example 21
  
04/23/20