@@ -1,3 +1,7 @@
+01/13/21
+  - Reference data types by their hex value
+  - Rename StructIdentifier > StringID
+
 01/02/21
   - Added video link for unit testing demo on tests/README.md
 
